--- a/trunk/mogwai/MogwaiPowerstaff/.classpath
+++ b/trunk/mogwai/MogwaiPowerstaff/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/aspectjrt.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/aspectjweaver.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-codec-1.3.jar" sourcepath="C:/Users/msertic/.m2/repository/commons-codec/commons-codec/1.3/commons-codec-1.3-sources.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-collections-3.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-digester-1.6.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-el-1.0.jar"/>
@@ -21,7 +21,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ejb3-persistence.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/el-api-1.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/el-impl-1.0.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate3.jar" sourcepath="C:/Users/msertic/.m2/repository/org/hibernate/hibernate/3.2.5.ga/hibernate-3.2.5.ga-sources.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jboss-serialization.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jsf-facelets.jar" sourcepath="C:/sourcen/facelets-1.1.13/src/java"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.1.0.jar"/>
