--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<context-param>
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-		<param-value>server</param-value>
+		<param-value>client</param-value>
 	</context-param>
 	<context-param>
 		<param-name>org.richfaces.SKIN</param-name>
