--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,10 @@
 		<param-name>org.apache.myfaces.SERIAL_FACTORY</param-name>
 		<param-value>de.mogwai.common.web.serialization.JBossSerialFactory</param-value>
 	</context-param>
+    <context-param>
+        <param-name>org.apache.myfaces.ERROR_HANDLING</param-name>
+        <param-value>false</param-value>
+    </context-param>
 
 	<listener>
 		<listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
