--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -1,3 +1,3 @@
 kias.database.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 kias.hibernate.showsql=false
-kias.index.dir=D:\\Temp\\hibernatesearch
+kias.index.dir=D:\\Daten\\Arbeit\\Projekte\\Synekt\\DB\\PowerStaffFTIndex
