--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <richfaces.version>3.1.6.GA</richfaces.version>
         <slf4j.version>1.6.1</slf4j.version>
         <bouncycastle.version>1.45</bouncycastle.version>
+        <jackson.version>2.1.1</jackson.version>     
     </properties>
 
     <repositories>
@@ -217,12 +218,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.1.1</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.1.1</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>jaxen</groupId>
